test/tests/stages/15_arrays_and_pointer_arithmetic/invalid_parse/array_of_functions.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[10]:
  int
  identifier(foo)
  [
  const int(3)
  ]
  (
  int
  identifier(a)
  )
  ;
